# DEALIoT

./: .codacy.yaml  .coverage  .dockerignore  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yml  ADOPTERS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  bandit.yaml  coverage.xml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  install_dealiot.sh  pyproject.toml  renovate.json  sonar-project.properties
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release-drafter.yml
beam/: Dockerfile.jobserver  Dockerfile.python-harness  Dockerfile.python-runtime  flink-job-server.sh  requirements.txt
caddy/: Caddyfile
dealiot-event-contracts/: Cargo.toml
dealiot_contracts/: __init__.py  events.py
deploy/: README.md
flink/: Dockerfile.pyflink  docker-entrypoint.sh  log4j-console.properties  requirements-pyflink.txt
haproxy/: haproxy.cfg
management-console/: Dockerfile  README.md
mqtt-kafka-bridge/: Cargo.toml  Dockerfile  bridge.py  requirements.txt
mqtt-kafka-bridge/src/: contracts.rs  lib.rs  main.rs
orchestration/: Dockerfile  requirements.txt
patroni/: pg1.yml.tmpl  pg2.yml.tmpl  pg3.yml.tmpl
pgadmin/: servers.json
pgbouncer/: ro.ini  rw.ini
pipelines/: __init__.py  media_backfill.py
prometheus/: prometheus.yml
scripts/: localize_website.py  post-bootstrap.sh  smoke-e2e.sh  (+2 more)
stream-normalizer/: Cargo.toml  Dockerfile
stream-normalizer/src/: lib.rs  main.rs
(+253 files in other folders)
