[package]
name = "dealiot-mqtt-kafka-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
env_logger = "0.11"
log = "0.4"
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tiny_http = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
