[package]
name = "dealiot-stream-normalizer"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "dealiot-stream-normalizer"
path = "src/main.rs"

[dependencies]
dealiot-event-contracts = { path = "../dealiot-event-contracts" }
env_logger = "0.11"
log = "0.4"
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tiny_http = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
